[gd_scene load_steps=2 format=3 uid="uid://bm034r6f1rjx8"]

[ext_resource type="Script" uid="uid://dkkncoqd8vqri" path="res://Source/UI/deck_user_interface.gd" id="1_uekyx"]

[node name="DeckUserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uekyx")

[node name="Cards" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="Discard" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 1.0
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Discard"]
custom_minimum_size = Vector2(64, 94)
layout_mode = 2

[node name="DiscardTop" type="TextureRect" parent="Discard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="DiscardCount" type="Label" parent="Discard/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stock" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 1.0
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Stock"]
custom_minimum_size = Vector2(64, 94)
layout_mode = 2

[node name="StockTop" type="TextureRect" parent="Stock/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="StockCount" type="Label" parent="Stock/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
